{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 127,
  "lineage": "8a759e9a-2ae5-462e-6a89-46a606ad7d58",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:760630460276:internet-gateway/igw-0c5d97f55af19c555",
            "id": "igw-0c5d97f55af19c555",
            "owner_id": "760630460276",
            "tags": {
              "Name": "hello-world-ecs-test-igw"
            },
            "tags_all": {
              "Name": "hello-world-ecs-test-igw"
            },
            "vpc_id": "vpc-0dca248728a4c50d8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:760630460276:route-table/rtb-01f21b4585792fae4",
            "id": "rtb-01f21b4585792fae4",
            "owner_id": "760630460276",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5d97f55af19c555",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hello-world-ecs-test-public-1a-rt"
            },
            "tags_all": {
              "Name": "hello-world-ecs-test-public-1a-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dca248728a4c50d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa0e0f69e61f4c0c",
            "route_table_id": "rtb-01f21b4585792fae4",
            "subnet_id": "subnet-0bdd0cd708cfad353"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:760630460276:security-group/sg-0022ffd9fc25c181a",
            "description": "Example Security Group",
            "egress": [],
            "id": "sg-0022ffd9fc25c181a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hello-world-ecs-test-sg",
            "name_prefix": "",
            "owner_id": "760630460276",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dca248728a4c50d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:760630460276:subnet/subnet-0bdd0cd708cfad353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.20.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdd0cd708cfad353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760630460276",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hello-world-ecs-test-public-1a"
            },
            "tags_all": {
              "Name": "hello-world-ecs-test-public-1a"
            },
            "vpc_id": "vpc-0dca248728a4c50d8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:760630460276:vpc/vpc-0dca248728a4c50d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.20.0/24",
            "default_network_acl_id": "acl-0b4585660b60aa50e",
            "default_route_table_id": "rtb-0824faf4ebe292c4b",
            "default_security_group_id": "sg-094158b762b929563",
            "dhcp_options_id": "dopt-7bfcfc1c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dca248728a4c50d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0824faf4ebe292c4b",
            "owner_id": "760630460276",
            "tags": {
              "Name": "hello-world-ecs-test"
            },
            "tags_all": {
              "Name": "hello-world-ecs-test"
            }
          }
        }
      ]
    }
  ]
}